--- a/Unreal/CarlaUE4/Config/DefaultEngine.ini
+++ b/Unreal/CarlaUE4/Config/DefaultEngine.ini
@@ -9,15 +9,6 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Carla/Maps/Town01.Town01
-GameDefaultMap=/Game/Carla/Maps/Town01.Town01
-ServerDefaultMap=/Game/Carla/Maps/Town01.Town01
-GlobalDefaultGameMode=/Game/Carla/Blueprints/Game/TheNewCarlaGameMode.TheNewCarlaGameMode_C
-GameInstanceClass=/Script/Carla.CarlaGameInstance
-TransitionMap=/Game/Carla/Maps/Town01.Town01
-GlobalDefaultServerGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode.CarlaGameMode_C
-
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.MotionBlur=False
 r.AllowStaticLighting=False
@@ -79,5 +70,19 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Carla/Maps/Town01.Town01
+LocalMapOptions=
+TransitionMap=/Game/Carla/Maps/Town01.Town01
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Carla.CarlaGameInstance
+GameDefaultMap=/Game/Carla/Maps/Town01.Town01
+ServerDefaultMap=/Game/Carla/Maps/Town01.Town01
+GlobalDefaultGameMode=/Game/Blueprints/NewGameMode.NewGameMode_C
+GlobalDefaultServerGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode.CarlaGameMode_C
 
 
