Change gamemode and fix compile by adding includes

--- a/Unreal/CarlaUE4/Config/DefaultEngine.ini
+++ b/Unreal/CarlaUE4/Config/DefaultEngine.ini
@@ -82,7 +82,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Carla.CarlaGameInstance
 GameDefaultMap=/Game/Carla/Maps/Town01.Town01
 ServerDefaultMap=/Game/Carla/Maps/Town01.Town01
-GlobalDefaultGameMode=/Game/Blueprints/NewGameMode.NewGameMode_C
+GlobalDefaultGameMode=/Game/Carla/Blueprints/Game/TheNewCarlaGameMode.TheNewCarlaGameMode_C
 GlobalDefaultServerGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode.CarlaGameMode_C
 
 
